static/style.css
body.rsvp, body.main, body.info, body.reg, html {
    height: 100%;
    margin: 0;
    background-color: black;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    font-size: 16px;
    font-family: Roboto, "Lucida Grande", Tahoma;
    /* overflow: hidden; */
}

body.rsvp {
    background-image: url("gk0.jpg");
}
body.main {
    background-image: url("gk2.jpg");
}
body.info {
    background-image: url("gk1.jpg");
    background-position: top;
}
body.reg {
    background-image: url("gk3.jpg");
}

div.transbox, div.registry, div.info{
    position: fixed;
    width: 100%;
    top: 10%;
    padding-top: 1em;
    padding-bottom: 1em;
    background: rgba(0, 0, 0, 0.5);
    color: white;
    text-align: center;
    /* font-size: x-large; */
    font-size: 200%;
}

div.info{
    height: 70%;
    top: 3em;
    /* position: relative; */
    /* width: 90%; */
    /* margin-top: 10%; */
    /* margin-bottom: 3em; */
    /* overscroll-behavior: contain; */
    overflow-y: scroll;
    color: white;
    text-align: center;
    font-size: 100%;
    padding: 0;
    /* padding-left: 1em; */
    /* padding-right: 1em; */
}
p.info{
    padding-left: 1em;
    padding-right: 1em;
}
li.info, ul.info{
    text-align: left;
    /* margin-left: 1em; */
    margin-right: 0.5em;
}
.info a:link, a:visited {
    color: white;
}

div.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    background: rgba(0, 0, 0, 0.5);
    color: white;
    text-align: center;
}

/* Setup a nice header */
.header {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 2em;
    background: rgba(0, 0, 0, 0.5);
    list-style-type: none;
    color: white;
    text-align: center;
    margin: 0;
    padding: 0;
}
/* Only pad between elements */
.header li + li {
    padding-left: 0.25em;
}
.header li {
    display: inline-block;
}
.header a:link, a:visited {
    color: white;
    background-color: #f44336;
    text-decoration: none;
    padding: 0.25em;
}
.header a:hover, a:active {
    background-color: red;
    padding: 0.25em;
}

/* Used for our RSVP page */
div.search, div.guestselection, div.confirmation {
    position: fixed;
    width: 100%;
    top: 15%;
    padding-top: 1em;
    padding-bottom: 1em;
    background: rgba(0, 0, 0, 0.5);
    color: white;
    text-align: center;
    /* font-size: 200%; */
}

div.guestselection {
}
ul.guest {
    list-style-type: none;
    text-align: left;
}
div.confirmation {
}

/* Error message area */
div.error {
    position: fixed;
    width: 100%;
    top: 5%;
    padding-top: 0.75em;
    padding-bottom: 0.75em;
    text-align: center;
    background: white;
    color: red;
}

/* Make sure our text is big enough that we don't zoom in */
input[type="text"]
{
    font-size: 16px;
}
img.widthfit {
    max-width: 50%;
    margin: auto;
}

